# DenoISTpy

./: .Rbuildignore  .gitignore  AGENT_HANDOFF.md  DESCRIPTION  LICENSE.md  NAMESPACE  NEWS.md  NOTICE  README.md  pyproject.toml
R/: denoist.R  neighbour_offset.R  pmm_model.R
denoistpy/: __init__.py  cli.py  core.py  export.py  io.py  mixture.py  offsets.py  progress.py  report.py  types.py
inst/extdata/: example_spe.rds  result.rds  tx_sub.rds
inst/script/: testdata.R  testdata.txt
man/: denoist.Rd  local_offset_distance_with_background.Rd  local_offset_distance_with_background_fast.Rd  solve_poisson_mixture.Rd
notebooks/: run_denoist_folder_zarr.ipynb
tests/testthat/: test-denoist.R  test-neighbour_offset.R  test-pmm_model.R
tests/testthat/denoist_results/: denoist_results.rds
tests_py/: test_denoistpy.py  test_r_parity.py
tests_py/parity/: environment-r.yml  generate_r_reference.R
vignettes/: denoist_spe.Rmd  denoist_spe.md
