[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "denoistpy"
version = "0.1.0"
description = "Sparse-first Python prototype of DenoIST for image-based spatial transcriptomics data."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
gpu = ["torch>=2.1"]
spatialdata = ["spatialdata", "anndata"]
test = ["pytest>=7"]

[project.scripts]
denoistpy = "denoistpy.cli:main"

[tool.setuptools.packages.find]
include = ["denoistpy*"]

[tool.setuptools]
license-files = ["LICENSE.md", "NOTICE"]

[tool.pytest.ini_options]
testpaths = ["tests_py"]
norecursedirs = [".git", ".pytest_cache", "pytest-cache-files-*", "pytest-tmp"]
addopts = "-p no:cacheprovider"
